# counter-strike-2d

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client_config.yaml  game-config.yaml  installer.sh  server-config.yaml  start_clients.sh  two_clients.sh
client/: CMakeLists.txt  ClientInterface.ui  CreateMatch.ui  Lobby.ui  TeamSelection.ui  animation.cpp  animation_provider.cpp  animation_provider.h  camera.cpp  camera.h  client.cpp  client.h  client_main.cpp  creatematchdialog.cpp  creatematchdialog.h  field_of_view.cpp  field_of_view.h  game_config.cpp  game_config.h  gameloop.cpp  gameloop.h  graphics_engine.cpp  graphics_engine.h  hud_manager.cpp  hud_manager.h  input_handler.cpp  input_handler.h  jugador.cpp  jugador.h  lobbywindow.cpp  lobbywindow.h  mainwindow.cpp  mainwindow.h  mock_server.h  player.cpp  player.h  pointer.cpp  pointer.h  q_game_details_dto.h  render.cpp  (+9 more)
client/interface/: CMakeCache.txt  CMakeLists.txt  ClientInterface.ui  mainwindow.cpp  mainwindow.h
client/providers/: CMakeLists.txt  animation_provider.cpp  animation_provider.h  texture_provider.cpp
client/providers/spritesheet_data/: hud_numbers.yaml  hud_symbols.yaml  map_embrador_tiles.yaml
client/renderables/: CMakeLists.txt  animation.cpp  animation.h  pointer.cpp  pointer.h  renderable_block.cpp  renderable_block.h  renderable_gun.cpp  renderable_gun.h  renderable_gun_effect.cpp  renderable_gun_effect.h  renderable_legs.cpp  renderable_legs.h  renderable_map.cpp  renderable_map.h  renderable_player.cpp  renderable_player.h  renderable_pointer.cpp  renderable_pointer.h
client/renderables/hud/: CMakeLists.txt  renderable_hud_ammo.cpp  renderable_hud_ammo.h  renderable_hud_base.h  renderable_hud_buy_guns.cpp  renderable_hud_buy_guns.h  renderable_hud_health.cpp  renderable_hud_health.h  renderable_hud_loaded_ammo.cpp  renderable_hud_loaded_ammo.h  renderable_hud_money.cpp  renderable_hud_money.h  renderable_hud_timer.cpp  renderable_hud_timer.h  renderable_hud_total_ammo.cpp  renderable_hud_total_ammo.h  renderable_numbers.cpp  renderable_numbers.h
client/renderables/map/: CMakeLists.txt  renderable_block.cpp  renderable_block.h  renderable_map.cpp  renderable_map.h
editor/: CMakeLists.txt  CMakeListsOK.txt  Makefile  MapEditor.ui  README.md  block.cpp  cmake_install.cmake  compile_commands.json  main.cpp  main_window.h  mainwindow.cpp  mainwindow.h  map.yaml  map_editor.h  map_editor.ui  mapeditor.cpp  mapeditor.h  maploader.cpp  maploader.h  sheet_data.h  sheet_editor.h  tilesheeteditor.cpp  tilesheeteditor.h  widget.cpp  widget.h
editor/common/: Makefile  cmake_install.cmake
editor/common/network/: Makefile  cmake_install.cmake
editor/config/: map_config.yaml  map_config2.yaml  tilesheet_config.yaml
editor/resources/: resources.qrc  resources.qrc.depends
editor/resources/tiles/: sprites.sh
editor/src/: CMakeLists.txt  MapEditor.ui  block.cpp  block.h  mainwindow.cpp  mainwindow.h  mapdata.h  mapeditor.cpp  mapeditor.h  maploader.cpp  maploader.h  sheetdata.cpp  sheetdata.h  sheeteditor.cpp  sheeteditor.h  tilesheetdata.cpp  tilesheetdata.h  tilesheeteditor.cpp  tilesheeteditor.h
server/: CMakeLists.txt  acceptor.cpp  acceptor.h  client_handler.cpp  client_handler.h  client_lobby.h  client_session.cpp  client_session.h  client_setup.h  cmd_constructor.h  cmd_deserializer.cpp  cmd_deserializer.h  game.cpp  game.h  game_loop.cpp  game_loop.h  game_maker.cpp  game_maker.h  game_maker_error.h  game_monitor.cpp  game_monitor.h  game_setup.h  lobby_command_constructor.h  main.cpp  player_handler.cpp  player_handler.h  server.cpp  server.h
server/command/: CMakeLists.txt  aim.h  start_moving.h
server/config/: game_config.cpp  game_config.h  loop_config.h  map_config.h  weapon_config.h  world_config.h
server/factory/: CMakeLists.txt  game_factory.cpp  game_factory.h  map_factory.cpp  map_factory.h  player_factory.cpp  player_factory.h  world_factory.cpp  world_factory.h
server/game/: CMakeLists.txt  game.cpp  game.h  game_maker.cpp  game_maker.h  game_maker_error.cpp  game_maker_error.h  player_handler.cpp  player_handler.h
server/game/config/: CMakeLists.txt  game_config.cpp  game_config.h  player_config.h  structure_config.h  weapon_config.h  world_config.h
server/game/factory/: CMakeLists.txt  game_factory.cpp  game_factory.h  map_factory.cpp  map_factory.h  player_factory.cpp  player_factory.h  weapon_factory.cpp  weapon_factory.h  world_factory.cpp  world_factory.h
server/game/player_commands/: aim.h  buy_ammo.h  buy_weapon.h  drop.h  drop_bomb.h  pickup.h  player_cmd_constructor.h  player_command.h  start_attacking.h  start_defusing.h  start_moving.h  start_planting.h  start_reloading.h  stop_action.h  stop_attacking.h  stop_moving.h  stop_planting.h  use_weapon.h
server/game/world/: CMakeLists.txt  counter_terrorist.cpp  counter_terrorist.h  drop.h  map.cpp  map.h  player.cpp  player.h  random.cpp  random.h  terrorist.cpp  terrorist.h  timer.cpp  timer.h  world.cpp  world.h
server/lobby_commands/: CMakeLists.txt  create_game.cpp  create_game.h  join_game.cpp  join_game.h  list_games.cpp  list_games.h  lobby_cmd_constructor.cpp  lobby_cmd_constructor.h  lobby_command.h
server/model/: CMakeLists.txt  action_strategy.h  attack.cpp  attack.h  bomb.h  circle.h  collidable.h  counter_terrorist.h  ct_equipment.h  equipment.h  game.cpp  game.h  hitbox.h  idle.h  map.h  player.cpp  player.h  player_physics.cpp  player_physics.h  random.cpp  random.h  structure.h  terrorist.h  timer.h  trajectory.h  tt_equipment.h  tuple.h  weapon.cpp  weapon.h  weapons.h
server/network/: CMakeLists.txt  acceptor.h  client_session.cpp  client_session.h
server/player_commands/: CMakeLists.txt  aim.h  attack.h  command.h  move.cpp  move.h  start_attacking.h  start_moving.h  stop_attacking.h  stop_moving.h
server/world/: CMakeLists.txt  counter_terrorist.cpp  counter_terrorist.h  map.cpp  map.h  player.cpp  player.h  player_factory.cpp  player_factory.h  random.cpp  terrorist.cpp  terrorist.h  world.cpp  world.h
(+211 files in other folders)
